--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "atk-auth-api"
-version = "0.1.0"
+version = "0.2.0"
 description = "An API for interfacing with DEX IdP"
 authors = ["Panu Oksiala <panu@oksiala.fi>"]
 readme = "README.md"
@@ -14,6 +14,7 @@ requests = "^2.31.0"
 requests-oauthlib = "^1.3.1"
 sentry-sdk = {extras = ["fastapi"], version = "^1.29.2"}
 pyyaml = "^6.0.1"
+pyjwt = {extras = ["crypto"], version = "^2.8.0"}
 
 
 [tool.poetry.group.dev.dependencies]
